<?xml version="1.0"?>
<package format="2">
  <name>yaskawa_ethercat</name>
  <version>1.0.0</version>
  <description>Package for controlling Yaskawa Sigma 7 servo drives from ROS</description>

  <maintainer email="kylews@uw.edu">Kyle Schultz</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>soem</build_depend>
  <build_export_depend>soem</build_export_depend>
  <exec_depend>soem</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
</package>
